@@ -176,6 +176,19 @@ tasks.register<JavaExec>("runNonOsrResizeTest") {
     workingDir = rootProject.projectDir
 }
 
+tasks.register<JavaExec>("runNonOsrLoadHtmlTest") {
+    group = "application"
+    mainClass.set("xyz.kbrowser.NonOsrLoadHtmlTestKt")
+    val compileTestKotlin = tasks.named("compileTestKotlin")
+    classpath = files(compileTestKotlin, configurations.named("testRuntimeClasspath"))
+    jvmArgs(
+        "--enable-native-access=jcef",
+        "--add-opens=jcef/com.jetbrains.cef.remote.browser=ALL-UNNAMED",
+        "--add-opens=jcef/com.jetbrains.cef.remote=ALL-UNNAMED"
+    )
+    workingDir = rootProject.projectDir
+}
+
 tasks.register<JavaExec>("runKBDebugTest") {
     group = "application"
     mainClass.set("xyz.kbrowser.KBDebugTestKt")
